src/styles/navigation.css
.custom-navbar {
  background-color: var(--background-color);
  color: var(--text-color);
  border-bottom: 1px solid #e5e5e5;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  height: 60px;
  padding: 8px 20px;
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: row;
  flex-wrap: nowrap;
  z-index: 100;
  transition: background-color 0.3s ease, box-shadow 0.3s ease;
}

.navbar-left {
  flex-grow: 1;
  text-align: left;
}

.navbar-right {
  flex-grow: 1;
  text-align: right;
  padding-right: 32px;
}

.navbar-link {
  color: var(--text-color);
  text-decoration: none;
  font-size: 1.5rem;
  margin: 0 16px;
  display: inline-block;
  position: relative;
  transition: color 0.5s ease-in-out;
}

.navbar-link:hover {
  color: var(--cta);
  transition: color 0.5s ease-out;
}

.navbar-link-hover:hover {
  color: var(--cta);
  transition: color 0.5s ease-in-out;
  border-bottom: 1px solid var(--cta);
  transition: border-bottom 0.5s ease-in-out;
  transform: translateY(-4px);
}

.scrolled {
  width: 80%;
  background-color: var(--navbar-scrolled-background-color);
  border-radius: 16px;
  top: initial;
  bottom: 16px;
  left: 50%;
  transform: translate(-50%, 0);
  .navbar-link {
    color: var(--navbar-scrolled-text-color);
  }
  .theme-toggle {
    color: var(--navbar-scrolled-text-color);
  }
}

@media (max-width: 768px) {
  .custom-navbar {
    padding: 8px 8px;
  }
  .navbar-right {
    padding-right: 8px;
  }
  .navbar-link {
    font-size: 1.2rem;
  }
}

.top-arrow {
  background-color: var(--navbar-scrolled-background-color);
  border-radius: 16px;
  position: fixed;
  left: 8px;
  bottom: 16px;
  font-size: 2rem;
  color: var(--navbar-scrolled-text-color);
  transition: color 0.5s ease-in-out;
  z-index: 2;
  font-size: 1.5rem;
  height: 60px;
  padding: 8px 20px;
}

.top-arrow.show {
  transition: color 0.5s ease-in-out;
}

.top-arrow.hide {
  display: none;
}

@media (max-width: 768px) {
  .top-arrow {
    display: none !important;
  }
}

